# Discord-Bot_Hase

./: .env  .env.example  .gitignore  Dockerfile  README.md  bot.py  environment.yml  pyproject.toml  requirements.txt
.github/workflow/: docker-image-ci.yml
.github/workflows/: docker-image.yml  docker-publish.yml
conf/: config.yaml
data/: chat.db
src/: bot.py  command_helper.py  commands.py  helper.py  helper_commands.py  helper_setup.py  main.py  setup.py  setup_helper.py
src/cogs/commands/: cmd_data.py  cmd_fun.py  cmd_genai.py  cmd_general.py  cmd_nlp.py  data.py  fun.py  general.py  nlp.py
src/cogs/listeners/: lstn_error.py  lstn_guild.py  lstn_msg.py
src/database/: chat_db.py  db_helper.py  helper_db.py
src/utils/: helpers.py  setup.py
