[tool.poetry]
name = "discord_assistant_bot"
version = "0.1.0"
description = "Basic Python based discord bot with various features."
authors = ["danczw <dev.dc@pm.me>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
openai = "^0.25.0"
"discord.py" = "^2.1.0"
flake8 = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
