[project]
name = "hase-discord-bot"
version = "2.1.0"
description = "Basic Python based discord bot with various features."
authors = ["danczw <github@prvc.cc>"]
license = "Apache License 2.0"
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "discord-py>=2.4.0",
    "openai>=1.60.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]

[tool.ruff]
line-length = 120
